--- a/web/css/main.css
+++ b/web/css/main.css
@@ -3,14 +3,34 @@
   box-sizing: content-box !important;
   font-family: "Roboto Mono";
 }
-
-#cont_general { display: table-cell;background: rgba(255,255,255,0); padding: 30px; width: 260px; }
+.fila{
+  width: 100%;
+}
+.fila::after{
+  content:"";
+  clear: both;
+  display:table;
+}
+.row::after{
+  content: "";
+  clear: both;
+  display: table;
+}
+#cont_general {
+  min-width: 450px;
+  position:fixed;
+  right:4em;
+  box-sizing: border-box;
+  display: table-cell;
+  background: rgba(255,255,255,0);
+  padding: 30px;
+  width: 60%; }
 
 
 
 .carta-cont { display: flex; text-align: center;  }
-.carta-ic-marco { width: 80px; height: 80px; padding: 10px; border: 2px solid #bbb; }
-.carta-icon {background: #bbb; width: 100%; height: 100%; background-size: 160px 160px; }
+.carta-ic-marco {height: 4em; border: 2px solid #bbb; padding: 0.5rem; }
+.carta-icon {background: #bbb; width: 100%; height: 100%;background-position: top; background-size:cover;}
 .carta-ic-cover {  height: 100%; background: rgba(122,143,140,0.8); transition: all ease 1s; -moz-transition: all ease 1s;}
 .carta-ic-cover:hover { background: rgba(22,43,79,0.1); }
 
