--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -16,10 +16,10 @@
                 </li>
                 {% endif %}
                 <li class="nav-item{% if ruta starts with "user_" %} active{% endif %}">
-                    <a class="nav-link" href="{{ path('user_list') }}"><i class="fas -jedi fa-jedi"></i>CyberLords</a>
+                    <a class="nav-link" href="{{ path('user_list') }}"><i class="fas -jedi fa-jedi"></i> Ranking</a>
                 </li>
                 <li class="nav-item{% if ruta == "portada" %} active{% endif %}">
-                    <a class="nav-link" href="{{ path('portada') }}"><i class="fas fa-vihara"></i> Historia <span class="sr-only">(actual)</span></a>
+                    <a class="nav-link" href="{{ path('portada') }}"><i class="fas fa-vihara"></i> Historia<span class="sr-only">(actual)</span></a>
                 </li>
 
 
@@ -30,7 +30,7 @@
                 </li>
                     {% else %}
                         <li class="nav-item {% if ruta starts with "card_" %} active{% endif %}">
-                            <a class="nav-link" href="{{ path('card_list') }}"><i class="fas -solar-panel fa-solar-panel"></i>Cartas</a>
+                            <a class="nav-link" href="{{ path('card_list') }}"><i class="fas -solar-panel fa-solar-panel"></i> Personajes</a>
                         </li>
 
                 {% endif %}
