--- a/app/Resources/views/typeCard/list2.html.twig
+++ b/app/Resources/views/typeCard/list2.html.twig
@@ -1,26 +1,31 @@
-{% extends 'layout.html.twig' %}
+{% extends 'coleccion/main.html.twig' %}
 {% block content %}
-<table class="tabla_cartas table-responsive-lg">
-    {% if app.request.get('_route') ends with 'coleccion' %}
-        {% set cartas = app.user.cards %}
-    {% else %}
-        {% set cartas = cards %}
-    {% endif %}
-    {% set raiz =  'recursos/cardsImages/' %}
-<th>
-    <td></td>
-</th>
-<tr class="fila_tabla primera_fila_tabla">
-    {%  for carta in cartas %}
+    {{ parent() }}
+    {% if usuario %}
 
+    <h1>Coleccion de {{ usuario.nickname }}</h1>
+
+    {% endif %}
+<table class="tabla_cartas table-responsive-lg">
+
+    {% set raiz =  'recursos/cardsImages/' %}
+
+<tr class="fila_tabla primera_fila_tabla">
+    {%  for carta in cards %}
+        {% if usuario %}
+            {% set imageRoute = carta.typeCard.imageRoute %}
+        {% else %}
+            {% set imageRoute = carta.imageRoute %}
+        {% endif %}
     {% if loop.index == 6 or loop.index == 11 or loop.index == 16 or loop.index == 21%}
 </tr>
     <tr class="fila_tabla {{ loop.index}}" >
         {% endif %}
 
 
-            <td class="">
-                <img class="img_carta_lista img-fluid" style="height: 140px; z-index:3;" src="{{ asset(raiz~carta.imageRoute~'.jpg') }}" alt="{{ carta.name }}">
+            <td class=""><a href="#">
+                <img class="img_carta_lista img-fluid" style="height: 140px; z-index:3;" src="{{ asset(raiz~imageRoute~'.jpg') }}" alt="{% if usuario == null %}{{ carta.name }}{% endif %}">
+                </a>
             </td>
 
     {% endfor %}
