Mejorado aspecto del formulario login -creadas clases CSS para todo el formulario -añadido login.js

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -30,6 +30,8 @@
 <script src="{{ asset('popper/popper.min.js') }}"></script>
 <script src="{{ asset('bootstrap/js/bootstrap.min.js') }}"></script>
 
+<!--Mis JavaScripts -->
+<script src="{{ asset('js/login.js') }}"> </script>
 
 {% block javascripts %}{% endblock %}
 
