Añadidos primeras imágenes de fondo.

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -52,10 +52,10 @@
     <div class="container">
         {% block contenidoExt %}
         {% endblock %}
-        <div id="wrapper">
+{#        <div id="wrapper">#}
 
 
         {% block content %}{% endblock %}
-        </div>
+{#        </div>#}
     </div>
 {% endblock %}
