--- a/app/Resources/views/user/list.html.twig
+++ b/app/Resources/views/user/list.html.twig
@@ -1,8 +1,9 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
+    <div style="width:105%;height: 100%; position: absolute;left: -5%; ;background: url("{{ asset('recursos/fondos/fondo_ranking.jpg') }}")">
     <h1>CyberLords</h1>
-    <table class="table">
+    <table class="table" style="overflow-x: scroll;background: url('{{ asset('recursos/fondos/fondo_ranking.jpg') }}')">
         <thead>
         <tr>
             <th class="letra_listas_cabecera">Id.</th>
@@ -24,4 +25,5 @@
         {% endfor %}
         </tbody>
     </table>
+    </div>
 {% endblock %}
