--- a/app/Resources/views/seguridad/entrar.html.twig
+++ b/app/Resources/views/seguridad/entrar.html.twig
@@ -2,7 +2,7 @@
 
 {% block contenidoExt %}
 
-    <main class="contenedor_form_login_cp">
+    <div class="contenedor_form_login_cp" style="background: url('{{ asset('recursos/fondos/fondo_login.png') }}')">
         <form class="form_login_cp"action="{{ path('usuario_entrar') }}" method="post">
             <div class="form_image_login_cp"></div>
 {#            <svg class="form_logo_login_cp" xmlns="http://www.w3.org/2000/svg" width="3044" height="840" viewBox="416.5 656.5 3044 840">#}
@@ -25,7 +25,7 @@
                 <div class="button_icon_cp"></div>
             </button>
         </form>
-    </main>
+    </div>
 
 
 
