--- a/app/Resources/views/deck/eliminar.html.twig
+++ b/app/Resources/views/deck/eliminar.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     {{ parent() }}
-    <div class="alert alert-danger">
+    <div id="fondo_back" class="alert alert-danger">
         <p>¿Estás seguro de que quieres borrar el escuadrón?</p>
     </div>
 
