--- a/app/Resources/views/market/product_list.html.twig
+++ b/app/Resources/views/market/product_list.html.twig
@@ -1,7 +1,9 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
+    <div id="fondo_tienda">
     <p><button class="fas input-group-append">1x carta</button></p>
     <p><button class="fas -business-time">3x carta</button></p>
     <p><button >5x carta</button></p>
+    </div>
 {% endblock %}
