--- a/app/Resources/views/user/list.html.twig
+++ b/app/Resources/views/user/list.html.twig
@@ -1,7 +1,8 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <div style="width:105%;height: 100%; position: absolute;left: -5%; ;background: url("{{ asset('recursos/fondos/fondo_ranking.jpg') }}")">
+
+    <div id="fondo_ranking" style="width:105%;height: 100%; position: absolute;left: -5%; ;background: url("{{ asset('recursos/fondos/fondo_ranking.jpg') }}")">
     <h1>CyberLords</h1>
     <table class="table" style="overflow-x: scroll;background: url('{{ asset('recursos/fondos/fondo_ranking.jpg') }}')">
         <thead>
