Creado formulario cp de Registro User -[BUG]: ocurre un error al intentar guardar el usuario

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -41,10 +41,11 @@
                 <a href="{{ path('usuario_salir') }}" class="ml-3 btn btn-outline-primary"><i class="fas fa-times"></i> EXIT</a>
 
             {% else %}
+                <span> <a href="{{ path('usuario_nuevo') }}">registro</a></span>
                 {% if ruta ends with 'entrar' %}
-                <span></span>
+
                 {% else %}
-                <a href="{{ path('usuario_entrar') }}" class="btn btn-outline-primary"><i class="fas fa-sign-in-alt"></i> ENTRAR</a>
+                    <a href="{{ path('usuario_entrar') }}" class="btn btn-outline-primary"><i class="fas fa-sign-in-alt"></i> ENTRAR</a>
                 {% endif %}
             {% endif %}
         </div>
