--- a/app/Resources/views/typeCard/list2.html.twig
+++ b/app/Resources/views/typeCard/list2.html.twig
@@ -1,5 +1,5 @@
-{% extends 'coleccion/main.html.twig' %}
-{% block content %}
+{% extends 'layout.html.twig' %}
+{% block contenidoExt %}
 
     {% if usuario %}
 
