--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="{{ path('miMain') }}"> CyberTrap TCG</a>
+        <a class="navbar-brand" href="{{ path('portada') }}"> CyberTrap TCG</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Mostrar secciones">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -27,7 +27,7 @@
 
                 {% if is_granted('ROLE_PLAYER') %}
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-coins"></i>Mercado</a>
+                    <a class="nav-link" href="{{ path('carta_comprar_una' , {'id':app.user.id} )}}"><i class="fas fa-coins"></i>Mercado</a>
                 </li>
                     {% else %}
                         <li class="nav-item {% if ruta starts with "card_" %} active{% endif %}">
@@ -54,6 +54,8 @@
     <div class="container">
         {% block contenidoExt %}
         {% endblock %}
+
+
 {#        <div id="wrapper">#}
 
         {% block content %}{% endblock %}
