--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -24,7 +24,9 @@
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 </head>
 <body style="background: #0d0f15">
-{% block body %}{% endblock %}
+{% block body %}
+{% block controlUsuario %} {% endblock %}
+{% endblock %}
 <!-- Bootstrap JS y sus dependencias (jQuery y popper.js) -->
 <script src="{{ asset('jquery/jquery-3.3.1.min.js') }}"></script>
 <script src="{{ asset('popper/popper.min.js') }}"></script>
