--- a/app/Resources/views/deck/crearMazo.html.twig
+++ b/app/Resources/views/deck/crearMazo.html.twig
@@ -1,4 +1,4 @@
-{% extends 'coleccion/main.html.twig' %}
+{% extends 'layout.html.twig' %}
 
 {% block content %}
 <div id="fondo_back" style="background: url("{{ asset('recursos/fondos/foto_cp3.jpg') }}")">
@@ -13,7 +13,7 @@
        {{ form_widget(form) }}
        <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> Guardar cambios</button>
        {% if not es_nueva %}<a href="#" class="btn btn-danger"><i class="fas fa-trash"></i> No funciona</a>{% endif %}
-
+    //la ruta para eliminar es ¿deck_editar?
 
        {{ form_end(form) }}
 </div>
