--- a/web/css/main.css
+++ b/web/css/main.css
@@ -5,20 +5,18 @@
 
 }
 body{
-  overflow-y:scroll !important;
-  overflow-x:scroll !important;
+
 }
-.container{
-  height: 600px;
-  width: 900px;
-  margin: 7.5% 0 1% 1%;
-}
+/*.container{*/
+/*  !*height: 600px;*!*/
+/*  width: 900px;*/
+/*  margin: 7.5% 0 1% 1%;*/
+/*}*/
 
 
 .tabla_cartas{
-  margin-right: 0.5em;
-  margin-left: 15%;
-  float:right;
+  margin-bottom:1.4em;
+
 }
 .grid_cartas {
   position:fixed;
@@ -93,6 +91,8 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  overflow-y:scroll !important;
+  overflow-x:scroll !important;
 }
 
 *,
@@ -318,57 +318,27 @@ body {
 /* FIN FORM LOGIN CYBERPUNK*/
 
 /* CONTROL USUARIO*/
-#container_control_itf_usuario{
- font-family: "Roboto Mono";
-  list-style-type: none;
-  margin: 0;
-  padding:0;
-  text-decoration: none;
-  letter-spacing: 1px;
-  font-size: 24px;
-  transition: all .2s;
-}
-.control_itf_main_menu{
-  display:flex;
-  height: 80%;
-  width: 40vh;
-  flex-direction: column;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  background: rgba(3,3,3,0.5);
-  -webkit-box-shadow: 0px 0px 4vh 0px  rgba(219,219,219,0.5);
-  -moz-box-shadow: 0px 0px 4vh 0px rgba(219,219,219,0.5);
-  box-shadow: 0px 0px 4vh 0px rgba(219,219,219,0.5);
-}
+#menu_jugador{
+  background-color: red;
 
-.control_itf_main_menu a{
-  padding:3vh;
-  font-size: 3.1vh;
-  text-align: center;
-  display:block;
+}
+#menu_jugador:first-child{
+}
+#menu_jugador:last-child{
 
 }
 
-.control_itf_icon{
-  color: cyan;
-  display:block;
+.menu_jugador_opcion{
+  display: inline-block;
+  margin-left: 2em;
+  margin-right: 2em;
+  width: 20%;
+  height: 70%;
+  background-color: #fff;
 }
-
-a:hover .control_itf_icon{
-  color: mediumvioletred;
-  transform: scale(1.2);
-}
-
-.open{
-  width: 60vh;
-}
-
-
 
 /*FIN CONTROL USUARIO*/
 
-body { background:url(https://image.ibb.co/bG1hBS/image.png); background-color: #000000; background-attachment: fixed; padding: 0; margin: 0; }
 
 ::-webkit-scrollbar { width: 7px; }
 ::-webkit-scrollbar-track { background: black; }
