Ajustando rutas/vistas InterfazUsuario v4 -nav actualizado -coleccion muestra cartas y decks -user flow para crear y borrar deck

--- a/app/Resources/views/user/InterfazUsuario.html.twig
+++ b/app/Resources/views/user/InterfazUsuario.html.twig
@@ -5,13 +5,13 @@
     {% set raiz =  'recursos/cardsImages/' %}
     <div id="menu_jugador">
        <div class="menu_jugador_opcion">
-           <a href="">Mis mazos</a>
+           <a href="{{ path('cartas_lista_user',{'id':usuario.id}) }}">Coleccion</a>
        </div>
        <div class="menu_jugador_opcion">
            <a href="">Jugar</a>
        </div>
        <div class="menu_jugador_opcion">
-           <a href="">mi coleccion</a>
+           <a href="{{ path('carta_comprar_una', {'id': usuario.id}) }}">Tienda</a>
        </div>
     </div>
 {% endif %}
