--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -20,15 +20,12 @@
                         <a class="nav-link" href="{{ path('user_list') }}"><i class="fas -jedi fa-jedi"></i> Ranking</a>
                     </li>
                     <li class="nav-item{% if ruta == "portada" %} active{% endif %}">
-                        <a class="nav-link" href="{{ path('portada') }}"><i class="fas fa-vihara"></i> Historia<span class="sr-only">(actual)</span></a>
+                        <a class="nav-link" href="{{ path('portada') }}"><i class="fas fa-vihara"></i> Night City<span class="sr-only">(actual)</span></a>
                     </li>
 
 
 
                     {% if is_granted('ROLE_PLAYER') %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('carta_comprar_una' , {'id':app.user.id} )}}"><i class="fas fa-coins"></i>Mercado</a>
-                    </li>
                         {% else %}
                             <li class="nav-item {% if ruta starts with "card_" %} active{% endif %}">
                                 <a class="nav-link" href="{{ path('card_list') }}"><i class="fas -solar-panel fa-solar-panel"></i> Personajes</a>
